--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aws-sdk/lib-dynamodb": "^3.658.1",
     "@aws-sdk/util-dynamodb": "^3.658.1",
     "@aws-sdk/client-translate": "^3.687.0",
+    "aws-sdk": "^2.1692.0",
     "ajv": "^8.17.1",
     "aws-cdk-lib": "2.156.0",
     "axios": "^1.1.2",
